# new-AGI

./: AGENTS.md  README.md  adversarial_tester.py  agi_language_engine.py  agi_resolution_preprint.tex  agi_resolution_results.json  aging_resolution_preprint.tex  aging_resolution_results.json  arxiv_bridge.py  arxiv_bridge_v3.py  autopoietic_ouroboros.py  boss_fights.py  consensus_v2_results.json  discovered_axes.json  discovered_engine_v2.json  econ_resolution_preprint.tex  econ_resolution_results.json  engine_v2_consensus.py  ouroboros_results.json  ouroboros_self_optimizer.py  paper_generator.py  phase4_deep.py  pyproject.toml  results_phase4_deep.json  semantic_extractor.py  singularity_engine.py  theory_discovery.py  toe_resolution_preprint.tex  toe_resolution_results.json  unified_engine.py  unified_preprint.tex  unified_results.json  verification_dump.txt
.cache/: embeddings_a8fc3569d5b0de1adfe3c927a6ca76f1.npy
.jules/: bolt.md
data/: mock_abstracts.json
epistem/: __init__.py  cartridge.py  embed.py  isomorphism.py  report.py
episteme/: README.md  __init__.py  autopoiesis.py  benchmarks.py  cartridge.py  consensus.py  core.py  discovery.py  embed.py  engine.py  export.py  isomorphism.py
legacy/: adversarial_tester.py  arxiv_bridge_v2.py  boss_fights.py  engine_v2_consensus.py  main.py  phase5_unified.py  semantic_extractor.py
results/: agi_resolution_preprint.tex  agi_resolution_results.json  aging_resolution_preprint.tex  aging_resolution_results.json  econ_resolution_preprint.tex  neuro_resolution_preprint.tex  neuro_resolution_results.json  (+5 more)
